@@ -99,6 +99,12 @@ public:
    */
   virtual void HandleEnergyRecharged (void) = 0;
 
+  /**
+   * This function is called by the EnergySource object when energy stored in
+   * the energy source is changed. Should be implemented by child classes.
+   */
+  virtual void HandleEnergyChanged (void) = 0;
+
 
 private:
   /**
