@@ -50,8 +50,9 @@ public:
    * Constructor
    * \param txVector the WifiTxVector
    * \param mpdutype the mpduType
+   * \param frameComplete the frameComplete
    */
-  WifiPhyTag (WifiTxVector txVector, MpduType mpdutype);
+  WifiPhyTag (WifiTxVector txVector, MpduType mpdutype, uint8_t frameComplete);
   /**
    * Getter for WifiTxVector parameter
    * \return the WifiTxVector
@@ -62,6 +63,11 @@ public:
    * \return mpduType the mpduType
    */
   MpduType GetMpduType (void) const;
+    /**
+     * Getter for frameComplete parameter
+     * \return the frameComplete parameter, i.e. 0 if the frame is not complete, 1 otherwise.
+     */
+  uint8_t GetFrameComplete (void) const;
 
   // From class Tag
   uint32_t GetSerializedSize (void) const;
@@ -73,6 +79,7 @@ public:
 private:
   WifiTxVector m_wifiTxVector; ///< wifi transmit vector
   MpduType m_mpduType; ///< MPDU type
+  uint8_t m_frameComplete; ///< Used to indicate that TX stopped sending before the end of the frame
 };
 
 } // namespace ns3
