@@ -113,6 +113,9 @@ WifiRadioEnergyModel::SetEnergySource (const Ptr<EnergySource> source)
   NS_LOG_FUNCTION (this << source);
   NS_ASSERT (source != NULL);
   m_source = source;
+  m_switchToOffEvent.Cancel ();
+  Time durationToOff = GetMaximumTimeInState (m_currentState);
+  m_switchToOffEvent = Simulator::Schedule (durationToOff, &WifiRadioEnergyModel::ChangeState, this, WifiPhy::OFF);
 }
 
 double
@@ -145,6 +148,9 @@ WifiRadioEnergyModel::GetTotalEnergyConsumption (void) const
       break;
     case WifiPhy::SLEEP:
       energyToDecrease = duration.GetSeconds () * m_sleepCurrentA * supplyVoltage;
+      break;
+    case WifiPhy::OFF:
+      energyToDecrease = 0;
       break;
     default:
       NS_FATAL_ERROR ("WifiRadioEnergyModel:Undefined radio state: " << m_currentState);
@@ -286,12 +292,58 @@ WifiRadioEnergyModel::SetTxCurrentFromModel (double txPowerDbm)
     }
 }
 
+Time
+WifiRadioEnergyModel::GetMaximumTimeInState (int state) const
+{
+  Time remainingTime;
+  double remainingEnergy = m_source->GetRemainingEnergy();
+  double supplyVoltage = m_source->GetSupplyVoltage ();
+  switch (state)
+    {
+    case WifiPhy::IDLE:
+      remainingTime = NanoSeconds (1e9 * (remainingEnergy / (m_idleCurrentA * supplyVoltage)));
+      break;
+    case WifiPhy::CCA_BUSY:
+      remainingTime = NanoSeconds (1e9 * (remainingEnergy / (m_ccaBusyCurrentA * supplyVoltage)));
+      break;
+    case WifiPhy::TX:
+      remainingTime = NanoSeconds (1e9 * (remainingEnergy / (m_txCurrentA * supplyVoltage)));
+      break;
+    case WifiPhy::RX:
+      remainingTime = NanoSeconds (1e9 * (remainingEnergy / (m_rxCurrentA * supplyVoltage)));
+      break;
+    case WifiPhy::SWITCHING:
+      remainingTime = NanoSeconds (1e9 * (remainingEnergy / (m_switchingCurrentA * supplyVoltage)));
+      break;
+    case WifiPhy::SLEEP:
+      remainingTime = NanoSeconds (1e9 * (remainingEnergy / (m_sleepCurrentA * supplyVoltage)));
+      break;
+    default:
+      NS_FATAL_ERROR ("WifiRadioEnergyModel: undefined radio state " << state);
+    }
+  return remainingTime;
+}
+
 void
 WifiRadioEnergyModel::ChangeState (int newState)
 {
   NS_LOG_FUNCTION (this << newState);
 
   m_nPendingChangeState++;
+
+  if (m_nPendingChangeState > 1 && newState == WifiPhy::OFF)
+    {
+      SetWifiRadioState ((WifiPhy::State) newState);
+      m_nPendingChangeState--;
+      return;
+    }
+
+  if (newState != WifiPhy::OFF)
+    {
+      m_switchToOffEvent.Cancel ();
+      Time durationToOff = GetMaximumTimeInState (newState);
+      m_switchToOffEvent = Simulator::Schedule (durationToOff, &WifiRadioEnergyModel::ChangeState, this, WifiPhy::OFF);
+    }
 
   Time duration = Simulator::Now () - m_lastUpdateTime;
   NS_ASSERT (duration.IsPositive ()); // check if duration is valid
@@ -328,6 +380,7 @@ WifiRadioEnergyModel::ChangeState (int newState)
 
   // update total energy consumption
   m_totalEnergyConsumption += energyToDecrease;
+  NS_ASSERT (m_totalEnergyConsumption <= m_source->GetInitialEnergy ());
 
   // update last update time stamp
   m_lastUpdateTime = Simulator::Now ();
@@ -342,7 +395,7 @@ WifiRadioEnergyModel::ChangeState (int newState)
   // by the previous instance is erroneously the final state stored in m_currentState. The check below
   // ensures that previous instances do not change m_currentState.
 
-  if (m_nPendingChangeState <= 1)
+  if (m_nPendingChangeState <= 1 && m_currentState != WifiPhy::OFF)
     {
       // update current state & last update time stamp
       SetWifiRadioState ((WifiPhy::State) newState);
@@ -376,6 +429,19 @@ WifiRadioEnergyModel::HandleEnergyRecharged (void)
   if (!m_energyRechargedCallback.IsNull ())
     {
       m_energyRechargedCallback ();
+    }
+}
+
+void
+WifiRadioEnergyModel::HandleEnergyChanged (void)
+{
+  NS_LOG_FUNCTION (this);
+  NS_LOG_DEBUG ("WifiRadioEnergyModel:Energy is changed!");
+  if (m_currentState != WifiPhy::OFF)
+    {
+      m_switchToOffEvent.Cancel ();
+      Time durationToOff = GetMaximumTimeInState (m_currentState);
+      m_switchToOffEvent = Simulator::Schedule (durationToOff, &WifiRadioEnergyModel::ChangeState, this, WifiPhy::OFF);
     }
 }
 
